major changes to CSS file. adds meat to bio, index, resume files.

--- a/resume.html
+++ b/resume.html
@@ -12,17 +12,27 @@
 	<h1> Ross Maxwell Kamen </h1>
 
 	<h2> Education </h2>
-	<p> tufts, charter </p>
+	<p> Tufts University. Human Factors Engineering. Class of 2018.
+	Charter School of Wilmington. Class of 2014. </p>
 
-	<h3> Relevant Coursework </h3>
-	<p> comp 11, comp 15 </p>
+	<h2> Relevant Coursework </h2>
+	<p> Introduction to Computer Science, Data Structures, Web Programming </p>
 
-	<h4> Professional Experience </h4>
-	<p> 2FatGuys, Kamen Cardiology </p>
+	<h2> Professional Experience </h2>
+	<p> 2FatGuys Restaurant </p>
+	<ul>
+		<li> Communicated with wait staff, bartenders, and cooks to ensure a quality product even at peak hours </li>
+		<li> Demonstrated adaptability in a high-pressure environment with strict time constraints </li>
+	<ul>
+	<p> Kamen Cardiology </p>
+	<ul>
+		<li> Organized and input hard-copy patient data to a new computer program </li>
+		<li> Helped the older staff learn to navigate the program </li>
+	<ul>
 
-	<h5> Skills </h5>
+	<h2> Skills </h2>
 	<p> C++, MATLAB, Python </p>
 
-	<h6> Activities </h6>
-	<p> STOMP, Tufts Design </p>
+	<h2> Activities </h2>
+	<p> STOMP, Tufts Design Club </p>
 </body>
