--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<h1> namenamename </h1>
+	<h1> Ross Maxwell Kamen </h1>
 	<p> <!-- this will be the link to the photo: <a href='file_in_directory.jpg'> me! </a> </p> -->
-	<p> <a href='resume.html'> resume </a> </p>
-	<p> <a href='bio.html'> a short biography </a> </p>
+	<h2> <a href='resume.html'> Resume </a> </h2>
+	<h2> <a href='bio.html'> A Short Biography </a> </h2>
 <body>
