attempts to fit link error with CSS

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title> index.html </title>
-	<link href="portfolio.css" />
+	<link rel="stylesheet" type="text/css" href="portfolio.css" >
 </head>
 
 <body>
 	<h1> Ross Maxwell Kamen </h1>
-	<p> <!-- this will be the link to the photo: <a href='file_in_directory.jpg'> me! </a> </p> -->
+	<img src='me.jpg' alt="picture of me">
 	<h2> <a href='resume.html'> Resume </a> </h2>
 	<h2> <a href='bio.html'> A Short Biography </a> </h2>
 <body>
