finally got image working

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title> index.html </title>
-	<link rel="stylesheet" type="text/css" href="portfolio.css" >
+	<link rel="stylesheet" href="portfolio.css" >
 </head>
 
 <body>
 	<h1> Ross Maxwell Kamen </h1>
-	<img src='me.jpg' alt="picture of me">
+	<img src="7.jpg" alt="picture of me">
 	<h2> <a href='resume.html'> Resume </a> </h2>
 	<h2> <a href='bio.html'> A Short Biography </a> </h2>
 <body>
