--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<title> Resume </title>
-	<link href="portfolio.css" rel="stylesheet" type="text/css">
+	<link href="portfolio.css" rel="stylesheet">
 </head>
 
 <body>
