fixes body tag error. adds photo.

--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
 	<img src="7.jpg" alt="picture of me">
 	<h2> <a href='resume.html'> Resume </a> </h2>
 	<h2> <a href='bio.html'> A Short Biography </a> </h2>
-<body>
+</body>
