adds redirect to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <head>
+	<meta http-equiv="refresh" content="0; url=http://rkamen02.github.io" />
 	<meta charset="utf-8" />
 	<title> index.html </title>
 	<link rel="stylesheet" href="portfolio.css" >
