--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <head>
 	<meta charset="utf-8" />
@@ -8,7 +8,7 @@
 
 <body>
 	<h1> Ross Maxwell Kamen </h1>
-	<img src="7.jpg" alt="picture of me">
+	<img src="7.jpg" class="main_img" alt="picture of me">
 	<h2> <a href='resume.html'> Resume </a> </h2>
 	<h2> <a href='bio.html'> A Short Biography </a> </h2>
 </body>
