blurring to the max

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
 <body>
 	<h1> Ross Maxwell Kamen </h1>
-	<img src="7.jpg" id="main_img" alt="picture of me">
+	<div class="blurred">
+		<img src="7.jpg" id="blurred_img" alt="picture of me">
+		<div class="plain">
+			<img src="7.jpg" id="main_img" alt="better picture of me">
+		</div>
+	</div>
 	<h2> <a href='resume.html'> Resume </a> </h2>
 	<h2> <a href='bio.html'> A Short Biography </a> </h2>
 </body>
