trying to stack the images

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 	<div class="container">
 	  <div class='row'>
 	    <div class="blurred">
-	      <!--class=img-->
-	      <img src="7.jpg" id="blurred_img" alt="picture of me">
+	      <img src="7.jpg" class='img' id="blurred_img" alt="picture of me">
 	    </div>
 	    <div class="plain">
-	      <img src="7.jpg" id="main_img" alt="better picture of me">
+	      <img src="7.jpg" class='img'  id="main_img" alt="better picture of me">
 	    </div>
 	  </div>
 	</div>
